GNOME Bugzilla – Bug 738963
region: don't crash for locales with no country_code
Last modified: 2014-10-22 22:48:54 UTC
See attached patch
Created attachment 289077 [details] [review] region: don't crash for locales with no country_code gnome_parse_locale() can return an empty country_code for some locales, which we are not taking into account when building the simple_locale string.
Review of attachment 289077 [details] [review]: A bit further down we do gnome_xkb_info_get_layouts_for_country() with country_code, so we should also skip that part in case country_code is NULL. With that, looks good
Pushed with that change, thanks. Attachment 289077 [details] pushed as 422166f - region: don't crash for locales with no country_code