region: don't crash for locales with no country_code

gnome_parse_locale() can return an empty country_code for some locales,
which we are not taking into account when building the simple_locale
string.

https://bugzilla.gnome.org/show_bug.cgi?id=738963